test_case/rust-lang_rust/77015_699602225_1.rs
rust
struct Test;

enum Foo {
    #[inline]
   //~^ ERROR attribute should be applied
    Variant,
}

fn main() {}
